@@ -1,3 +1,8 @@
+2010-10-23  Julien Danjou  <julien@danjou.info>
+
+	* erc-backend.el (erc-process-sentinel): Check that buffer is alive
+	before setting it as current buffer.
+
 2010-10-12  Juanma Barranquero  <lekktu@gmail.com>
 
 	* erc-xdcc.el (erc-xdcc-help-text): Fix typo in docstring.
